--- a/hexo/_config.yml
+++ b/hexo/_config.yml
@@ -63,7 +63,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: new
+theme: two
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
